Update and rename contact.htm to contact.html

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 <body>
 
     <div class="wrapper">
-        <header><a href="index.htm" class="logo"><i class="fa-solid fa-backward"></i></a></header>
+        <header><a href="index.html" class="logo"><i class="fa-solid fa-backward"></i></a></header>
 
         <main>
             <div class="col2 hero">
