--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 <body>
     
     <section class="portfolio" id="portfolio">
-        <header><a href="index.htm" class="logo"><i class="fa-solid fa-backward"></i></a></header>
+        <header><a href="index.html" class="logo"><i class="fa-solid fa-backward"></i></a></header>
 
         <div class="center-text">
             <h2>My <span>Portfolio</span></h2>
