--- a/index.html
+++ b/index.html
@@ -10,7 +10,24 @@
 <body>
     
 
+    <div class="bars"><i class="fa-solid fa-bars bar"></i></div>
     <div class="container">
+
+        <div class="menu">
+
+            <nav>
+                <h2>Navbar</h2>
+                <div class="close">
+                    <div class=""></div>
+                </div>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="portfolio.html">Portfolio</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+
         <div class="left_side">
             <div class="profileText">
                 <div class="imgBx">
@@ -40,7 +57,7 @@
                     </li>
                     <li>
                         <span class="icon"><i class="fa-brands fa-github"></i></span>
-                        <span class="text reveal-type">www.github.io</span>
+                        <a href="https://github.com/towebl"><span class="text reveal-type">www.github.io</span></a>
                     </li>
                 </ul>
             </div>
