--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <h4 class="reveal-type">Youtube, C50 Havard & Solo Learn</h4>
                     </li>
                     <li>
-                        <h5 class="reveal-type">2009 * 2021</h5>
+                        <h5 class="reveal-type">2009 - 2021</h5>
                         <h4 class="reveal-type">Matriculation</h4>
                         <h4 class="reveal-type">Primary - Trinity Secondary School</h4>
                     </li>
