--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 <body>
     
     <section class="portfolio" id="portfolio">
-        <header><a href="index.html" class="logo"><i class="fa-solid fa-backward"></i></a></header>
+        <header><a href="index.htm" class="logo"><i class="fa-solid fa-backward"></i></a></header>
 
         <div class="center-text">
             <h2>My <span>Portfolio</span></h2>
@@ -105,6 +105,21 @@
                     </div>
                     <h4>Website Development For Dark X</h4>
                 </div>
+            </div>
+        </div>
+
+        <div class="github-link">
+            <h2 class="topic">Links for websites</h2>
+            <div class="links">
+                <a href="https://towebl.github.io/thabangart.github.io/"><i class="fa-brands fa-github"></i>ThabangArt</a>
+                <a href="https://towebl.github.io/agog.github.io/"><i class="fa-brands fa-github"></i>AGOG Club</a>
+                <a href="https://towebl.github.io/shaker-s.github.io/"><i class="fa-brands fa-github"></i>Shakers</a>
+                <a href="https://towebl.github.io/coffeeshop.github.io/"><i class="fa-brands fa-github"></i>Coffeeshop</a>
+                <a href="https://towebl.github.io/cake.github.io/"><i class="fa-brands fa-github"></i>Cake</a>
+                <a href="https://towebl.github.io/dentist.github.io/"><i class="fa-brands fa-github"></i>Dentist</a>
+                <a href="https://towebl.github.io/realestate.github.io/"><i class="fa-brands fa-github"></i>Real Estate</a>
+                <a href="https://towebl.github.io/cosmoclub.github.io/"><i class="fa-brands fa-github"></i>Cosmo Club</a>
+                <a href="https://towebl.github.io/church.github.io/"><i class="fa-brands fa-github"></i>Church</a>
             </div>
         </div>
     </section>
